--- a/META.yml
+++ b/META.yml
@@ -3,7 +3,7 @@ abstract: 'Advanced object construction for DBIx::Simple!'
 author:
   - 'Красимир Беров <berov@cpan.org>'
 build_requires:
-  ExtUtils::MakeMaker: 0
+  DBD::SQLite: 1.29
 configure_requires:
   ExtUtils::MakeMaker: 0
 dynamic_config: 1
@@ -20,4 +20,4 @@ no_index:
 requires:
   DBIx::Simple: 1.33
   Test::More: 0
-version: 0.56
+version: 0.57
