--- a/META.yml
+++ b/META.yml
@@ -3,7 +3,9 @@ abstract: 'Advanced object construction for DBIx::Simple!'
 author:
   - 'Красимир Беров <berov@cpan.org>'
 build_requires:
+  Cwd: 0
   DBD::SQLite: 1.29
+  File::Basename: 0
 configure_requires:
   ExtUtils::MakeMaker: 0
 dynamic_config: 1
@@ -20,4 +22,5 @@ no_index:
 requires:
   DBIx::Simple: 1.33
   Test::More: 0
-version: 0.67
+  perl: 5.010001
+version: 0.69
